# HPC-NBody-Simulation

./: CMakeLists.txt  CUDA_REPORT.md  MPI_REPORT.md  OpenMP_REPORT.md  PROFILING_REPORT.md  PROJECT.md  README.md
profiling/gcov/: alloc_traits.h.gcov  allocator.h.gcov  array.gcov  barnes_hut.cpp.gcov  barnes_hut.h.gcov  barnes_hut_omp.cpp.gcov  barnes_hut_omp.h.gcov  basic_string.h.gcov  basic_string.tcc.gcov  c++config.h.gcov  char_traits.h.gcov  chrono.h.gcov  cmath.gcov  config.cpp.gcov  config.h.gcov  coverage.info  cpp_type_traits.h.gcov  direct_nbody.cpp.gcov  direct_nbody.h.gcov  direct_omp.cpp.gcov  direct_omp.h.gcov  generators.cpp.gcov  initializer_list.gcov  invoke.h.gcov  iomanip.gcov  ios_base.h.gcov  limits.gcov  main.cpp.gcov  move.h.gcov  new.gcov  new_allocator.h.gcov  octree.cpp.gcov  octree.h.gcov  particle.cpp.gcov  particle.h.gcov  predefined_ops.h.gcov  random.h.gcov  random.tcc.gcov  std_abs.h.gcov  std_function.h.gcov  (+12 more)
profiling/gcov/html/: cmd_line  index-sort-f.html  index-sort-l.html  index.html
profiling/gcov/html/src/: index-sort-f.html  index-sort-l.html  index.html  main.cpp.func-c.html  main.cpp.func.html  main.cpp.gcov.html
profiling/gcov/html/src/common/: config.cpp.func-c.html  config.cpp.func.html  config.cpp.gcov.html  config.h.func-c.html  config.h.func.html  config.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html  particle.cpp.func-c.html  particle.cpp.func.html  particle.cpp.gcov.html  particle.h.func-c.html  particle.h.func.html  particle.h.gcov.html  vector3d.h.func-c.html  vector3d.h.func.html  vector3d.h.gcov.html
profiling/gcov/html/src/openmp/: barnes_hut_omp.cpp.func-c.html  barnes_hut_omp.cpp.func.html  barnes_hut_omp.cpp.gcov.html  barnes_hut_omp.h.func-c.html  barnes_hut_omp.h.func.html  barnes_hut_omp.h.gcov.html  direct_omp.cpp.func-c.html  direct_omp.cpp.func.html  direct_omp.cpp.gcov.html  direct_omp.h.func-c.html  direct_omp.h.func.html  direct_omp.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
profiling/gcov/html/src/serial/: barnes_hut.cpp.func-c.html  barnes_hut.cpp.func.html  barnes_hut.cpp.gcov.html  barnes_hut.h.func-c.html  barnes_hut.h.func.html  barnes_hut.h.gcov.html  direct_nbody.cpp.func-c.html  direct_nbody.cpp.func.html  direct_nbody.cpp.gcov.html  direct_nbody.h.func-c.html  direct_nbody.h.func.html  direct_nbody.h.gcov.html  generators.cpp.func-c.html  generators.cpp.func.html  generators.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  octree.cpp.func-c.html  octree.cpp.func.html  octree.cpp.gcov.html  octree.h.func-c.html  octree.h.func.html  octree.h.gcov.html
profiling/gprof/: annotated_10000p_50s_serial.txt  call_graph_10000p_50s_serial.txt  flat_profile_10000p_50s_serial.txt
profiling/likwid/: likwid_FLOPS_DP_10000p_50s_4t.txt
scripts/: build.sh  install_likwid.sh  run_gcov.sh  run_gprof.sh  run_likwid.sh  run_scaling.sh
src/: main.cpp  main_cuda.cpp  main_mpi.cpp  main_openmp.cpp  main_serial.cpp
src/common/: config.cpp  config.h  particle.cpp  particle.h  vector3d.h
src/cuda/: nbody_cuda.cu  nbody_cuda.h
src/mpi/: domain.cpp  domain.h  nbody_mpi.cpp  nbody_mpi.h
src/openmp/: barnes_hut_omp.cpp  barnes_hut_omp.h  direct_omp.cpp  direct_omp.h
src/serial/: barnes_hut.cpp  barnes_hut.h  direct_nbody.cpp  direct_nbody.h  generators.cpp  generators.h  octree.cpp  octree.h
tests/: test_correctness.cpp
